modificato gloss.py

--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -78,7 +78,7 @@ Con il presente documento il gruppo \hx{} si impegna a sviluppare un prodotto ch
 \begin{itemize}
 	\item \textbf{Norme di Progetto}: \NdP;
 	\item \textbf{Capitolato d'appalto C6, \proj}: \\
-	\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf}.
+	\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.\gloss{pdf}}.
 \end{itemize}
 
 \subsubsection{Informativi}
@@ -163,7 +163,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 	\end{itemize}
 	\item \textbf{Precondizione}: il sistema risulta avviato e mostra la pagina iniziale dell'applicazione;
 	\item \textbf{Postcondizione}: il sistema ha ricevuto tutti gli input dall'attore sulle operazioni che vuole effettuare;
-	\item \textbf{Scenario principale}:
+	\item \textbf{\gloss{Scenario} principale}:
 	\begin{enumerate}
 		\item l'attore può aprire un progetto esistente (UC2);
 		\item l'attore può creare un nuovo progetto (UC3);
@@ -382,7 +382,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 	\item \textbf{Scenari alternativi}:
 	\begin{itemize}
 		\item l'attore non ha inserito il nome dell'attributo;
-%		\item l'attore non ha inserito il tipo dell'attributo; % Ho inserito il tipo predefinito (Object) come \gloss{scenario} alt. in UC4.1.4.3
+%		\item l'attore non ha inserito il tipo dell'attributo; % Ho inserito il tipo predefinito (Object) come scenario alt. in UC4.1.4.3
 		\item l'attore ha inserito per l'attributo un nome già esistente all'interno della classe stessa.
 	\end{itemize}
 \end{itemize}
