--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -59,9 +59,9 @@ Esso è suddiviso nelle seguenti sezioni:
 \subsubsection{Riferimenti normativi}
 \begin{itemize}
 	\item \NdP;
-	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf}, visitato il 07/02/2017;
+	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.\gloss{pdf}}, visitato il 07/02/2017;
 	\item Regolamento del progetto didattico] \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}, visitato il 07/02/2017;
-	\item Vincoli di organigramma e dettagli tecnico-economici: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}, visitato il 07/02/2017.
+	\item Vincoli di organigramma e dettagli tecnico-economici: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.\gloss{html}}, visitato il 07/02/2017.
 \end{itemize}
 \subsubsection{Riferimenti informativi} \label{sec:ref}
 \begin{itemize}
@@ -243,7 +243,7 @@ I diagrammi presentano una visualizzazione ridotta, talvolta su più pagine, per
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/ganttweeks1.png}}
 \label{tab:genweeks}
-\caption{Diagramma di Gantt della pianificazione generale, in settimane (parte 1)}
+\caption{\gloss{Diagramma di Gantt} della pianificazione generale, in settimane (parte 1)}
 
 Nota: la "dipendenza all'indietro" che sembra esistere tra \emph{Redazione Norme di Progetto} e \emph{Redazione Studio di Fattibilità} non esiste (vedi prossimi diagrammi in giorni).
 \end{figure}
@@ -978,7 +978,7 @@ Si è raggiunto l'obiettivo prefissato di assegnare ogni ruolo a ciascun compone
 % i colori danno problemi di visualizzazione alle linee
 
 
-È possibile ricavare interessanti statistiche dalla tabella (\ref{tab:gen}) e dal grafico di ripartizione oraria (\ref{fig:gen2}): % che riferimento ha inserito latex?
+È possibile ricavare interessanti statistiche dalla tabella (\ref{tab:gen}) e dal grafico di ripartizione oraria (\ref{fig:gen2}): % che riferimento ha inserito \gloss{latex}?
 \begin{itemize}
 \item Il ruolo {\Rx} richiede il quantitativo di ore minimo rispetto alle altre mansioni: inizialmente è richiesto uno sforzo maggiore per la stesura del \emph{Piano di Progetto}, ma superata la fase di {\AR} questo ruolo è richiesto in misura minore.
 \item Il ruolo {\AMx} richiede una discreta quantità di ore soprattutto in fase di {\AR} per definire un ambiente di sviluppo ideale. Completata questa fase il ruolo è richiesto in misura minore.
@@ -1177,7 +1177,7 @@ Qualora parte dei diagrammi non vengano riportati, si intende che essi hanno ris
 \includegraphics[width=1.2\textwidth]{img/ganttarc21.png}}
 \label{tab:cgen1}
 
-  \caption{Variazione rispetto alla pianificazione per fase di \AR, \gloss{diagramma di Gantt}}
+  \caption{Variazione rispetto alla pianificazione per fase di \AR, diagramma di Gantt}
 \end{figure}
 
 Si è verificato un ritardo nella stesura del presente documento a causa di una influenza di un membro del gruppo in data 30-12-2016.
