--- a/doc/Esterni/Piano_di_progetto/Rev_Piano_Progetto.tex
+++ b/doc/Esterni/Piano_di_progetto/Rev_Piano_Progetto.tex
@@ -50,9 +50,9 @@
 		
 		\begin{description}
 			\item \NdP;
-			\item[Capitolato d'appalto C6: \proj]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
+			\item[Capitolato d'appalto C6: \proj]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.\gloss{pdf}};
 			\item[Regolamento del progetto didattico]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf};
-			\item[Vincoli di organigramma e dettagli tecnico-economici]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}.
+			\item[Vincoli di organigramma e dettagli tecnico-economici]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.\gloss{html}}.
 		\end{description}
 		\subsubsection{Informativi} \label{sec:ref}
 		
@@ -351,7 +351,7 @@ I diagrammi presentano una visualizzazione ridotta e a volte su più pagine per 
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/ganttweeks1.png}}
 \label{tab:genweeks}
-\caption{Diagramma di Gantt della pianificazione generale, in settimane (parte 1)}
+\caption{\gloss{Diagramma di Gantt} della pianificazione generale, in settimane (parte 1)}
 
 Nota: la "dipendenza all'indietro" che sembra esistere tra \emph{Redazione Norme di Progetto} e \emph{Redazione Studio di Fattibilità} non esiste (vedi prossimi diagrammi in giorni).
 \end{figure}
@@ -1070,7 +1070,7 @@ Si è raggiunto l'obiettivo prefissato di assegnare ogni ruolo a ciascun compone
 % i colori danno problemi di visualizzazione alle linee
 
 
-È possibile ricavare interessanti statistiche dalla tabella (\ref{tab:gen}) e dal grafico di ripartizione oraria (\ref{fig:gen2}): % che riferimento ha inserito latex?
+È possibile ricavare interessanti statistiche dalla tabella (\ref{tab:gen}) e dal grafico di ripartizione oraria (\ref{fig:gen2}): % che riferimento ha inserito \gloss{latex}?
 \begin{itemize}
 \item Il ruolo {\Rx} richiede il quantitativo di ore minimo rispetto alle altre mansioni: inizialmente è richiesto uno sforzo maggiore per la stesura del \emph{Piano di Progetto}, ma superata la fase di {\AR} questo ruolo è richiesto in misura minore.
 \item Il ruolo {\AMx} richiede una buona quantità di ore soprattutto in fase di {\AR} per definire un ambiente di sviluppo ideale. Completata questa fase il ruolo è richiesto in misura minore.
@@ -1260,7 +1260,7 @@ Si ricorda che questo costo viene fornito a scopo informativo e rappresenta l'in
 \includegraphics[width=1.2\textwidth]{img/ganttarc1.png}}
 \label{tab:cgen1}
 
-  \caption{Variazione rispetto alla pianificazione per fase di \AR, \gloss{diagramma di Gantt} (parte 1)}
+  \caption{Variazione rispetto alla pianificazione per fase di \AR, diagramma di Gantt (parte 1)}
 \end{figure}
 
 
