--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -34,7 +34,7 @@
 		\begin{itemize}
 			\item \NdP;
 			\item \textbf{Capitolato d'Appalto C6, \proj}:
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
+			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.\gloss{pdf}};
 			\item \textbf{Standard ISO/IEC 12207:2008}:
 			\\ \url{http://ieeexplore.ieee.org/document/4475826/};
 			\item \textbf{Standard ISO/IEC 15504}:
@@ -271,7 +271,7 @@
 			\\Viene calcolata come la
 differenza fra la data pianificata di fine di un’attività e la data
 reale di fine di quell’attività: un valore di \textit{schedule variance} minore di zero indica che l'attività di progetto considerata sta richiedendo più tempo di quanto pianificato; se pari a zero indica invece che essa è perfettamente in linea con le tempistiche previste mentre se è addirittura strettamente positivo indica che sta procedendo più speditamente di quanto considerato. 
-			\\Da sottolineare che l'utilizzo di periodi di slack aumenta la possibilità che la \textit{schedule variance} assuma valori positivi.
+			\\Da sottolineare che l'utilizzo di periodi di \gloss{slack} aumenta la possibilità che la \textit{schedule variance} assuma valori positivi.
 			\\I range stabiliti per la metrica sono i seguenti:
 				\begin{itemize}
 					\item Range ottimale: $\geq{-10}$\%;
