--- a/doc/Esterni/Piano_di_qualifica/revisione_PdQ.tex
+++ b/doc/Esterni/Piano_di_qualifica/revisione_PdQ.tex
@@ -25,13 +25,13 @@ In tabella trovate le correzioni che consiglierei di apportare. Invece ho corret
 	“Standard adottato”, sotto “Qualità del prodotto” & Cambiare “dal lato dell’utilizzatore che utilizza tale prodotto [\dots]” in “dal lato di chi utilizza tale prodotto [\dots]”. \\ \hline
 	“Modello della qualità esterna ed interna” & Esplicitare “[\dots] è suddiviso nelle seguenti sei caratteristiche generali [\dots]”, anziché solo “è suddiviso in sei caratteristiche generali [\dots]” \\ \hline
 	“Risorse” (in “La strategia di gestione della qualità nel dettaglio”) & Piuttosto dei paragrafi, usare un elenco: questi paragrafi sono abbastanza brevi (quindi va bene un elenco) e non credo debbano essere indicizzati nell'indice generale. \\ \hline
-	“Risorse disponibili” & Cambiare “Le risorse software disponibili sono costituite dagli \gloss{editor} di testo latex e utilizzati per la stesura dei documenti, gli \gloss{IDE} [\dots]” in “Le risorse software disponibili sono costituite dagli editor di testo utilizzati per la stesura dei documenti in \gloss{Latex}, gli IDE [\dots]” \\ \hline
+	“Risorse disponibili” & Cambiare “Le risorse software disponibili sono costituite dagli \gloss{editor} di testo \gloss{latex} e utilizzati per la stesura dei documenti, gli \gloss{IDE} [\dots]” in “Le risorse software disponibili sono costituite dagli editor di testo utilizzati per la stesura dei documenti in Latex, gli IDE [\dots]” \\ \hline
 	“Misure” (in “Misure e Metriche”) & Propongo di scegliere uno solo tra \emph{range} e \emph{intervallo}. \\ \hline
 	“Misure” (in “Misure e Metriche”) & Nel range ottimale non bisognerebbe scrivere “risulta ottimale”, anziché “risulta accettabile”? Ma può darsi che mi sbagli io. \\ \hline
 	“Misure” (in “Misure e Metriche”) & Nel range accettabile, spezzare la frase lunga sei righe in: “Risulta implicito che valori non rientranti nell'intervallo di accettabilità sono eccessivamente bassi e non possono quindi essere accettati; essi richiedono immediate strategie correttive [\dots da qui in poi tutto ok]” \\ \hline
 	“Metriche per i processi” e altrove & Mettere \emph{schedule variance} e \emph{budget variance} in corsivo. Queste espressioni si trovano poche volte quindi il corsivo non dovrebbe essere pesante da leggere. \\ \hline
 	“Schedule Variance” & Sostiruire “[\dots] la differenza fra la data pianificata di fine di un’attività e la data di fine reale di quell'attività” con “[\dots] la differenza fra la data pianificata di fine di un’attività e la data reale di fine di quell'attività” (oppure anche “fine attività” al posto di “fine di un'attività”). \\ \hline
-	“Schedule Variance” e altrove & Sostiruire “periodi di slack” con “periodi di slack”, per non confonderli con l'applicazione \gloss{Slack}. \\ \hline
+	“Schedule Variance” e altrove & Sostiruire “periodi di \gloss{slack}” con “periodi di slack”, per non confonderli con l'applicazione Slack. \\ \hline
 	“Schedule Variance” & Errore di punteggiatura; meglio usare i due punti e il punto e virgola, così: “Viene calcolata come la differenza fra la data pianificata di fine di un'attività e la data di fine reale di quell'attività: un valore di schedule variance minore di zero indica che l'attività di progetto considerata sta richiedendo più tempo di quanto pianificato; se pari a zero indica invece [\dots]” \\ \hline
 	“Produttività di codifica” & Propongo di aggiungere una breve definizione di “ore/persona”, dato che dobbiamo essere il più espliciti possibile. \\ \hline
 	“Copertura del codice” & Sostituire “Si può ridurre tale indice [\dots]” con “Si può aumentare la copertura [\dots]”, sennò ci si confonde tra aumento della copertura e aumento degli errori\dots{} ma forse non ho capito bene: i metodi \emph{\gloss{getter}} e \emph{\gloss{setter}} aumentano o diminuiscono la copertura? \\ \hline
