--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -26,12 +26,12 @@
 \section{Introduzione}
 \input{tex/intro}
 
-% - scelta di linguaggi, framework, librerie etc...
+% - scelta di linguaggi, \gloss{framework}, librerie etc...
 % - interfacce con tali tecnologie
 \section{Tecnologie utilizzate}
 \input{tex/tecnologie}
 
-% - diagramma dei package
+% - diagramma dei \gloss{package}
 % - scelte architetturali
 % - altre cose ad alto livello
 \section{Descrizione dell'architettura}
@@ -43,7 +43,7 @@
 \section{Componenti}
 \input{tex/componenti}
 
-% JSON, client-server... ???
+% JSON, \gloss{client}-\gloss{server}... ???
 \section{Modelli dei dati e interfacce}
 \input{tex/modelli}
 
