--- a/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
+++ b/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
@@ -38,7 +38,7 @@
 		\begin{itemize}
 			\item \textbf{Glossario}: \Glossario;
 			\item \textbf{Capitolato d'Appalto C1}, \emph{APIM}: An \gloss{API} Market Platform
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C1.pdf};
+			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C1.\gloss{pdf}};
 			\item \textbf{Capitolato d'Appalto C2}, \emph{AtAVi}: Accoglienza tramite Assistente Virtuale
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C2.pdf};
 			\item \textbf{Capitolato d'Appalto C3}, \emph{DeGeOP}: A Designer and Geo-localizer Web App for Organizational Plants
@@ -122,7 +122,7 @@
 			Per quanto riguarda il set di tecnologie da utilizzarsi, ItalianaSoftware richiede ai gruppi impegnati sul progetto:
 			\begin{itemize}
 			\item di sviluppare il front end della web application con l'ausilio della terna JavaScript, \gloss{HTML} e \gloss{CSS3};
-			\item di scegliere tra una base di dati \gloss{SQL} o NoSQL per quanto riguarda il database.\\
+			\item di scegliere tra una base di dati \gloss{SQL} o \gloss{NoSQL} per quanto riguarda il database.\\
 			\end{itemize}
 			L'azienda suggerisce fortemente di utilizzare per la rappresentazione delle interfacce e per la creazione del marketplace
 			il linguaggio orientato ai microservizi: Jolie.
@@ -214,7 +214,7 @@
 				\item gli AWS come servizio per l'organizzazione di un server entro cui far operare l'applicativo;
 				\item \gloss{Django}, come framework in \gloss{Python} per la realizzazione del front-end dell'applicativo;
 				\item \gloss{PostgreSQL}, per la realizzazione del database di appoggio del software;
-				\item Librerie e framework quali \gloss{Bootstrap} e \gloss{React.js} per la creazione di interfacce utente, hammer.js e Yeoman;
+				\item Librerie e framework quali \gloss{Bootstrap} e \gloss{React.js} per la creazione di interfacce utente, \gloss{hammer.js} e Yeoman;
 				\item Html, Css e JavaScript per la realizzazione dell'interfaccia utente.
 			\end{itemize}
 		\subsubsection{Aspetti positivi e negativi}
@@ -244,7 +244,7 @@
 			\\Da un lato la dislessia, che nel nostro paese al giorno d'oggi rappresenta il disturbo dell'apprendimento più diffuso e che incide non poco nella 
 			vita delle persone che ne sono affette in quanto rende difficoltosa una delle attività fondamentali della routine quotidiana: la lettura. 
 			\\Dall'altro si spinge il gruppo fornitore a confrontarsi con una delle tecnologie che sta avendo negli ultimi tempi una diffusione sempre 
-			maggiore, quella del Text-to-Speech, alla base di applicazioni di grande importanza quali screenreader, lettori di messaggi, voci di 
+			maggiore, quella del \gloss{Text-to-Speech}, alla base di applicazioni di grande importanza quali screenreader, lettori di messaggi, voci di 
 			assistenti virtuali e probabilmente futura interfaccia per tutte quelle attività in cui è precluso, o comunque limitato, l'utilizzo della vista.
 			\paragraph{Dominio tecnologico}
 			Viene lasciato un ampio margine di libertà per quanto riguarda le tecnologie da impiegarsi, purché risultino adeguate allo scopo. 
@@ -254,7 +254,7 @@
 			\item l'utilizzo di un servizio di sintesi vocale, con consiglio per il motore di sintesi “Flexible and Adaptive Text-To-Speech”.
 			\end{itemize}
 			Nel caso si proceda allo sviluppo di un ebook reader, il proponente consiglia di utilizzare una libreria di terze parti preferibilmente 
-			open source per accedere al contenuto. Allo stesso modo, nel caso in cui si decida di estendere le funzionalità di un client di messaggistica, 
+			\gloss{open source} per accedere al contenuto. Allo stesso modo, nel caso in cui si decida di estendere le funzionalità di un client di messaggistica, 
 			si suggerisce di partire da uno già esistente, possibilmente open source.
 		\subsubsection{Aspetti positivi e negativi}
 		Tra le criticità è stato evidenziato il fatto che in tale capitolato ci sia da sviluppare un applicazione per dispositivi mobili.
