--- a/doc/Esterni/Specifica_tecnica/tex/componenti.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/componenti.tex
@@ -8,7 +8,7 @@
 
 
 
-\subsection{Client}
+\subsection{\gloss{Client}}
 
 \subsubsection{MainApp}
 % ...
@@ -20,7 +20,7 @@
 
 
 
-\subsection{Server}
+\subsection{\gloss{Server}}
 
 \subsubsection{Generator}
 % ...
