--- a/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
@@ -4,16 +4,16 @@
 
 
 
-\subsection{Client}
-Per implementare il client di \proj{} abbiamo scelto di utilizzare HTML5 e CSS3 assieme a JavaScript. Di seguito elenchiamo e descriviamo le librerie JavaScript di cui il nostro client necessita. Tutte le librerie sono open-source, come richiesto dal capitolato.
+\subsection{\gloss{Client}}
+Per implementare il client di \proj{} abbiamo scelto di utilizzare \gloss{HTML5} e \gloss{CSS3} assieme a \gloss{JavaScript}. Di seguito elenchiamo e descriviamo le librerie JavaScript di cui il nostro client necessita. Tutte le librerie sono open-source, come richiesto dal capitolato.
 
 \subsubsection{JointJS}
-La libreria \jointjs{} (\url{https://www.jointjs.com/opensource}) è una libreria open-source per realizzare editor di diagrammi interattivi, in maniera altamente personalizzabile. %Dipende da HTML5 e da alcune altre librerie JavaScript ma offre numerosi plug-in per realizzare particolari tipi di grafi.
+La libreria \jointjs{} (\url{https://www.jointjs.com/opensource}) è una libreria open-source per realizzare \gloss{editor} di diagrammi interattivi, in maniera altamente personalizzabile. %Dipende da HTML5 e da alcune altre librerie JavaScript ma offre numerosi plug-in per realizzare particolari tipi di grafi.
 
 La libreria sfrutta le seguenti tecnologie per il suo funzionamento:
 
 \begin{itemize}
-	\item \html{}: \jointjs{} richiede che una pagina \html{} sia popolata con un tag \texttt{<svg>}, che conterrà un diagramma.
+	\item \\gloss{html}{}: \jointjs{} richiede che una pagina \html{} sia popolata con un tag \texttt{<svg>}, che conterrà un diagramma.
 	\item Le seguenti librerie \js{}:
 	\begin{itemize}
 		\item \jquery{};
@@ -23,7 +23,7 @@ La libreria sfrutta le seguenti tecnologie per il suo funzionamento:
 \end{itemize}
 
 \subsubsection{\backbonejs}
-La libreria \backbonejs{} permette di strutturare applicazioni web single page (\gloss{SPA}) fornendo \textbf{modelli} con binding di chiave-valore, eventi, \textbf{collezioni} e \textbf{viste} con una gestione degli eventi dichiarativa. Essa offre inoltre una interfaccia \gloss{RESTful}.
+La libreria \backbonejs{} permette di strutturare applicazioni web single page (SPA) fornendo \textbf{modelli} con binding di chiave-valore, eventi, \textbf{collezioni} e \textbf{viste} con una gestione degli eventi dichiarativa. Essa offre inoltre una interfaccia RESTful.
 
 A causa della struttura data alla libreria \jointjs{}, sviluppata tramite MVC (collection), al fine di ridurre il numero di librerie necessarie allo sviluppo del progetto, si costruirà \proj{} estendendo le funzionalità di base offerte da \jointjs{} usando il modello \mvc{}.
 
@@ -38,9 +38,9 @@ La libreria \requirejs{} è un loader di moduli e file \js{}. Esso si occuperà 
 \subsubsection{\lodash}
 La libreria \lodash{} fornisce metodi di utilità non offerti da \js{} puro. Rispetto alla simile libreria \emph{Underscore}, questa fornisce più performance, più features e miglior documentazione. Essa inoltre è usata da \jointjs{}.
 
-\subsection{Server}
+\subsection{\gloss{Server}}
 
-\subsubsection{Apache Tomcat}
+\subsubsection{Apache \gloss{Tomcat}}
 % ...
 
 \subsubsection{Pivotal Spring}
