--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
@@ -73,7 +73,7 @@ Il presente documento si divide in tre sezioni principali:
 
 \subsubsection{Riferimenti normativi}
 \begin{itemize}
-	\item ISO/IEC 12207-1995: \url{http://www.math.unipd.it/\~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.\gloss{pdf}};
+	\item ISO/IEC 12207-1995: \url{http://www.math.unipd.it/\~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf};
 	\item Capitolato d'appalto dell'azienda \ZU: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}. % normativo o informativo?
 \end{itemize}
 
@@ -167,12 +167,19 @@ Il presente documento si divide in tre sezioni principali:
 		\item durante la progettazione architetturale, i progettisti definiscono i \textbf{test di integrazione}, cioè dei test che verificano il corretto interfacciarsi delle componenti del sistema;
 		\item durante la progettazione di dettaglio, la specifica del comportamento di una componente dev'essere accompagnata dalla definizione di un \textbf{test di unità} che verifichi il corretto funzionamento della componente isolata.
 	\end{enumerate}
+
 	Per descrivere l'architettura e il comportamento del sistema i progettisti utilizzano i diagrammi \gloss{UML} descritti qui di seguito, in riferimento allo standard UML 2.0:
 	\begin{itemize}
 		\item Diagramma dei \gloss{package}: raggruppa un numero di elementi UML in una sola unità di livello più alto.
-		\item \gloss{Diagramma delle classi}: descrive i tipi di entità (classi) del sistema e le relazioni tra esse.
+		\item \gloss{Diagramma delle classi}: descrive le interfacce delle componenti del sistema e le relazioni tra esse.
 		\item \gloss{Diagramma delle attività}: descrive i passi di una procedura.
 		\item Diagramma di sequenza: descrive uno scenario, dove le azioni sono disposte in sequenza e le varie scelte sono già state prese.
+	\end{itemize}
+
+	\proj{} è un software a oggetti; perciò, le componenti software descritte nei diagrammi delle classi sono classi \gloss{Java} e prototipi di oggetti \gloss{JavaScript}. Per comodità, chiameremo “classi” anche i prototipi di oggetti JavaScript, benché tale linguaggio non offra il costrutto \texttt{class} se non come “zucchero sintattico”. Pertanto, le procedure descritte nei diagrammi delle attività sono:
+	\begin{itemize}
+		\item in Java, solo ed esclusivamente metodi di classi;
+		\item in JavaScript, metodi di classi o funzioni che abbiano un nome esplicito.
 	\end{itemize}
 
 	\subsubsection{Codifica} \label{sec:cod}
@@ -194,7 +201,7 @@ Il presente documento si divide in tre sezioni principali:
 			% \item È opportuno usare frasi di senso compiuto in modo da essere più chiari possibili;
 			% \item È preferibile commentare sopra una riga di codice anziché alla fine di essa per una miglior facilità di lettura,
 			% \item Evitare di usare troppi simboli per separare i commenti. Lasciare invece uno spazio vuoto per separarli dal codice;
-			% \item Nel caso i commenti facciano parte anche della documentazione seguire le linee guida di jdoc (https://\gloss{github}.com/jsdoc3/jsdoc) %nel caso \gloss{javascript}
+			% \item Nel caso i commenti facciano parte anche della documentazione seguire le linee guida di jdoc (https://\gloss{github}.com/jsdoc3/jsdoc) %nel caso JavaScript
 		% \end{itemize}
 	\subsubsection{Strumenti}
 		\paragraph{\gloss{PragmaDB}}
